[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'my_nektool'
dynamic = ['version','readme']
description = "NextFlow-powered commandline tool to do a thing."
keywords = ["bioinformatics", "nextflow"]
authors = [
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dependencies = [
    "nextflow >= 0.4.0",
    "pyyaml >= 6.0",
    "Click >= 8.1.3",
]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0"
]
test = [
    "pytest"
]

[project.scripts]
my_nektool = "my_nektool.__main__:main"

[project.urls]
Homepage = "https://ccbr.github.io/nf-sandbox"
Documentation = "https://ccbr.github.io/nf-sandbox"
Repository = "https://github.com/CCBR/nf-sandbox"
Changelog = "https://github.com/CCBR/nf-sandbox/blob/main/CHANGELOG.md"

[tools.setuptools]
packages = ["my_nektool"]

[tool.setuptools.dynamic]
version = {file = "my_nektool/VERSION"}
readme = {file = "README.md"}
